# rollup-offchain

./: cabal.project  readme.md
rollup-aggregator-server/: CHANGELOG.md  LICENSE  rollup-aggregator-server.cabal
rollup-aggregator-server/app/: Main.hs
rollup-aggregator-server/scripts/: Seed.hs
rollup-aggregator-server/src/ZkFold/Cardano/Rollup/Aggregator/: Api.hs  Auth.hs  Batcher.hs  Config.hs  Ctx.hs  ErrorMiddleware.hs  Handlers.hs  Options.hs  Orphans.hs  Persistence.hs  RequestLoggerMiddleware.hs  Run.hs  SwaggerUI.hs  Types.hs  Utils.hs
rollup-aggregator-server/test/: Main.hs
rollup-aggregator-server/test/ZkFold/Cardano/Rollup/Aggregator/Test/: EndToEnd.hs  Validation.hs
rollup-aggregator-server/test/data/: setup-bytes.json
rollup-offchain-cardano-api/: CHANGELOG.md  rollup-offchain-cardano-api.cabal
rollup-offchain-cardano-api/app/: Main.hs
rollup-offchain-cardano-api/src/ZkFold/Cardano/Rollup/: Api.hs  Constants.hs  Orphans.hs  Types.hs  Utils.hs
rollup-offchain-cardano-api/src/ZkFold/Cardano/Rollup/Api/: Utils.hs
rollup-offchain-cardano-api/src/ZkFold/Cardano/Rollup/Types/: Errors.hs  Monad.hs  Script.hs
rollup-offchain-cardano-api/test/: Main.hs
rollup-offchain-cardano-api/test/ZkFold/Cardano/Rollup/: Test.hs
rollup-offchain-cardano-api/test/ZkFold/Cardano/Rollup/Test/: Update.hs
web/openapi/: api.yaml
