cabal-version: 3.4
name: rollup-offchain-cardano-api
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
license-file: LICENSE
author: Sourabh Aggarwal
maintainer: info@zkfold.io
-- copyright:
build-type: Simple
extra-doc-files: CHANGELOG.md

common common
  default-language: GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    TemplateHaskell
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    UnicodeSyntax
    ViewPatterns

  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wunused-packages

library
  import: common
  exposed-modules:
    ZkFold.Cardano.Rollup.Api
    ZkFold.Cardano.Rollup.Constants
    ZkFold.Cardano.Rollup.Orphans
    ZkFold.Cardano.Rollup.Utils
    ZkFold.Cardano.Rollup.Types
    ZkFold.Cardano.Rollup.Types.Errors
    ZkFold.Cardano.Rollup.Types.Monad
    ZkFold.Cardano.Rollup.Types.Script

  -- other-modules:
  -- other-extensions:
  build-depends:
    aeson,
    aeson-casing,
    aeson-picker,
    atlas-cardano,
    base >=4.18.2.1 && <5,
    base16-bytestring,
    bytestring,
    cardano-api,
    cardano-ledger-core,
    containers,
    cryptonite,
    data-default,
    deriving-aeson,
    ginger,
    http-types,
    lens,
    mime-mail,
    mtl,
    plutus-tx,
    req,
    smtp-mail,
    sqlite-simple,
    swagger2,
    symbolic-examples,
    text,
    time,
    zkfold-cardano,
    zkfold-cardano-scripts-common,

  hs-source-dirs: src