cabal-version: 3.4
name: rollup-offchain-cardano-api
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
license-file: LICENSE
author: Sourabh Aggarwal
maintainer: info@zkfold.io
-- copyright:
build-type: Simple
extra-doc-files: CHANGELOG.md

common common
  default-language: GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    TemplateHaskell
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    UnicodeSyntax
    ViewPatterns

  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wunused-packages

library
  import: common
  exposed-modules:
    ZkFold.Cardano.Rollup.Api
    ZkFold.Cardano.Rollup.Api.Utils
    ZkFold.Cardano.Rollup.Constants
    ZkFold.Cardano.Rollup.Orphans
    ZkFold.Cardano.Rollup.Types
    ZkFold.Cardano.Rollup.Types.Errors
    ZkFold.Cardano.Rollup.Types.Monad
    ZkFold.Cardano.Rollup.Types.Script
    ZkFold.Cardano.Rollup.Utils

  -- other-modules:
  -- other-extensions:
  -- TODO: Review build-deps
  build-depends:
    aeson,
    atlas-cardano,
    base >=4.18.2.1 && <5,
    base16-bytestring,
    bytestring,
    cryptonite,
    http-types,
    lens,
    mtl,
    plutus-ledger-api,
    plutus-tx,
    swagger2,
    symbolic-base,
    symbolic-ledger,
    text,
    zkfold-cardano,
    zkfold-cardano-scripts-common,

  hs-source-dirs: src

test-suite rollup-offchain-cardano-api-tests
  import: common
  -- other-modules:
  -- other-extensions:
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    ZkFold.Cardano.Rollup.Test
    ZkFold.Cardano.Rollup.Test.Update

  build-depends:
    atlas-cardano,
    base,
    bytestring,
    mtl,
    rollup-offchain-cardano-api,
    symbolic-base,
    symbolic-ledger,
    tasty,
    tasty-hunit,

executable rollup-seed
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    aeson,
    atlas-cardano,
    base,
    bytestring,
    directory,
    filepath,
    mtl,
    optparse-applicative,
    rollup-offchain-cardano-api,
    symbolic-base,
    symbolic-ledger,
    text,
    yaml,
    zkfold-cardano,